# Argus-ExamSupervisonSystem

./: Attendance_Sheet.txt  CMakeLists.txt  README.md  Violation_Report.txt  imgui.ini  student  student_agent  supervisor  supervisor_agent  supervisor_app  violation_report.txt  violation_report_raw.txt
.github/workflows/: linux_build.yml
Code/Common/: CMakeLists.txt
Code/Common/include/: hastable.h  huffman.h  priorityqueue.h  protocol.h  trie.h
Code/Common/src/: hashtable.cpp  huffman.cpp  priorityqueue.cpp  protocol.cpp  trie.cpp
Code/Student/: CMakeLists.txt
Code/Student/Src/: echo_student  echo_student.cpp  student
Code/Student/config/: blacklist.txt  whitelist.txt
Code/Supervisor/: CMakeLists.txt
Code/Supervisor/Src/: dashboard.cpp  echo_supervisor  echo_supervisor.cpp  supervisor  violation_report.txt
Code/Supervisor/include/: dashboard.h
Deploy/usr/local/: blacklist.txt  studentConfig.txt  whitelist.txt
Resources/: SPL-1 Final Presentation.pptx
